[package]
name = "storage"
version = "0.1.0"
authors = ["Ziyuan Liu <ziyuan.liu@gmail.com>"]

[dependencies]
elastic-array = "0.6"
parking_lot = "0.4"
log = "0.4"
bit-vec = "0.4"
lru-cache = "0.1"
primitives = { path = "../primitives" }
serialization = { path = "../serialization" }
chain = { path = "../chain" }
display_derive = "0.0.0"
